# keysound

./: .gitignore  .oxfmtignore  AGENTS.md  CREDITS.md  README.md  REQUIREMENTS.md  TODO.md  eslint.config.ts  package-lock.json  package.json  playwright.config.ts  wdio.conf.js
.claude/: settings.local.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/soundpacks/billiard/: pack.json
src-tauri/resources/soundpacks/bubble/: pack.json
src-tauri/resources/soundpacks/cat/: pack.json
src-tauri/resources/soundpacks/clock/: pack.json
src-tauri/resources/soundpacks/default/: pack.json
src-tauri/resources/soundpacks/dog/: pack.json
src-tauri/resources/soundpacks/drum/: pack.json
src-tauri/resources/soundpacks/fist/: pack.json
src-tauri/resources/soundpacks/gaming/: pack.json
src-tauri/resources/soundpacks/gunshot/: pack.json
src-tauri/resources/soundpacks/harp/: pack.json
src-tauri/resources/soundpacks/katana/: pack.json
src-tauri/resources/soundpacks/laser/: pack.json
src-tauri/resources/soundpacks/minimal/: pack.json
src-tauri/resources/soundpacks/mining/: pack.json
src-tauri/resources/soundpacks/mokugyo/: pack.json
src-tauri/resources/soundpacks/piano/: pack.json
src-tauri/resources/soundpacks/piano-real/: pack.json
src-tauri/resources/soundpacks/pingpong/: pack.json
src-tauri/resources/soundpacks/raindrop/: pack.json
src-tauri/resources/soundpacks/raindrop-metal/: pack.json
src-tauri/src/: custom_pack.rs  keyboard.rs  lib.rs  main.rs  sound_engine.rs  sound_pack.rs
(+17 files in other folders)
